# vicareub2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  vicareub2.py
src/pyvicareub2/: __init__.py  config.py  data_collector.py  database.py  db_cli.py  main.py  migrate_csv_to_sqlite.py  models.py  plot_generator.py  run_streamlit.py  streamlit_app.py  vicare_client.py  web_server.py
static/css/: style.css
