[tool.poetry]
name = "vicareub2"
version = "0.1.0"
description = ""
authors = ["Timothee Carayol"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
PyViCare = "*"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
ipykernel = "^6.15.3"
fire = "^0.4.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
