[project]
name = "vicareub2"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "requests>=2.27.1",
    "PyViCare",
    "pandas>=1.4.1",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
    "ipykernel>=6.15.3",
    "fire>=0.4.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "flask>=3.0.0",
]
